# Ross-trading

./: .gitignore  Agent-Architecture  README.md  alembic.ini  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: drift_issue.yml
.github/prompts/: drift-pr-audit.md
.github/workflows/: ci.yml  drift-ci.yml
docs/: architecture.md  drift-control.md  ground_truth.md  historical-data.md
ground_truth/: 2026-05-01.json
plans/: phase-2-issue-40-scanner-filter-primitives.md  phase-2-issue-41-scanner-core-and-ranking.md  phase-2-issue-42-async-tick-driver.md  phase-2-issue-51-scan-with-decisions.md  phase-2-issue-74-replay-driver.md  phase-3-issue-72-daily-strength.md  phase-3-issue-73-breakout-turnaround.md  phase-3-issue-XX-daily-strength.md  phase-4-pattern-detector-a1-entry-signal.md
plans/archive/: phase-2-issue-40-scanner-filter-primitives.md  phase-2-issue-41-scanner-core-and-ranking.md  phase-2-issue-42-async-tick-driver.md
plans/waves/: HANDOFF.md  README.md  WAVE-00-ingestion-contract.md  WAVE-01-execution-ledger.md  WAVE-02-broker-port.md  WAVE-03-risk-supervisor.md  WAVE-04-reconciliation.md  WAVE-05-live-wiring-exits.md  WAVE-06-go-live-gate.md
reports/: 2026-05-01.md  phase-2-recall-summary.md
scripts/: backfill_historical.py  drift_ci_check.py  upgrade_recordings_v1_to_v2.py
tests/fakes/: __init__.py  decision_sink.py  float_ref.py  market.py  news.py  risk_event_sink.py  snapshot_assembler.py  universe.py
tests/fixtures/: ground_truth_2025-01-15.json
tests/integration/: test_alembic_x_args.py  test_capture_session.py  (+12 more)
(+82 files in other folders)
