[project]
name = "ross-trading"
version = "0.0.0"
description = "Autonomous AI trading agent mimicking Ross Cameron's small-cap momentum process."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2,<3",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ross_trading = ["py.typed", "journal/migrations/script.py.mako"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "S", "PT", "TCH"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests that exercise multiple data-layer components together",
]
